INTERNAL-411-110; fix postcode's notice color

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/edit.phtml
@@ -147,7 +147,7 @@ $showOptionalRegions = $block->getConfig('general/region/display_all');
                     </div>
                 <?php endif; ?>
 
-                <div class="field field-reserved">
+                <div class="field field-reserved !text-text-500">
                     <label class="sr-only tracking-widest" for="zip">
                     <span><?= /* @noEscape */
                         $block->getAttributeData()->getFrontendLabel('postcode') ?></span>
