--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/form.phtml
@@ -1,7 +1,5 @@
 <?php
 
-declare(strict_types=1);
-
 use Hyva\GraphqlViewModel\ViewModel\GraphqlViewModel;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
@@ -63,7 +61,17 @@ mutation createProductReviewMutation(
         <?php if ($block->getAllowWriteReviewFlag()): ?>
             <form
                 class="w-full max-w-sm"
-                x-data="Object.assign(Form('<?= $escaper->escapeHtmlAttr($formId) ?>'), ReviewForm({
+                id="<?= $escaper->escapeHtmlAttr($formId) ?>"
+                @submit.prevent="function($event) {
+                const $form = $event.target;
+                <?= $recaptcha ? $escaper->escapeHtmlAttr($recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_PRODUCT_REVIEW)) : '' ?>
+                this.validate();
+                if (this.errors === 0) {
+                  this.placeReview();
+                }
+            }"
+                action=""
+                x-data="ReviewForm({
                     ratings: <?= $escaper->escapeHtmlAttr(json_encode($block->getRatings()->getData())) ?>,
                     messages: {
                         required: '<?= $escaper->escapeJs(__('Please verify you\'ve entered all required information')) ?>',
@@ -72,21 +80,10 @@ mutation createProductReviewMutation(
                     gqlQuery: `<?= $escaper->escapeHtmlAttr($gqlViewModel->query('create_product_review_mutation', $gqlCreateProductReviewMutation)) ?>`,
                     sku: '<?= $escaper->escapeJs($block->getProductInfo()->getSku()) ?>',
                     fieldName: '<?= $recaptcha ? $escaper->escapeJs($recaptcha->getResultTokenFieldName($formId)) : '' ?>',
+                    formId: '<?= $escaper->escapeJs($formId) ?>',
                     storeCode: '<?= $escaper->escapeJs($viewModelStore->getStoreCode()) ?>'
-                }))"
-                id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                @submit.prevent="function($event) {
-                    // do not rename $form, the variable is the expected name in the recaptcha output
-                    const $form = $event.target;
-                    this.validate();
+                })"
 
-                    <?= $recaptcha ? $escaper->escapeHtmlAttr($recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_PRODUCT_REVIEW)) : '' ?>
-
-                    if (this.errors === 0) {
-                        this.placeReview();
-                    }
-                }"
-                action=""
             >
                 <?= $block->getChildHtml('form_fields_before') ?>
                 <fieldset class="w-full flex flex-col items-center justify-center">
@@ -166,51 +163,36 @@ mutation createProductReviewMutation(
                             </div>
                         </fieldset>
                     <?php endif ?>
-                    <div
-                        x-cloak
-                        x-show="displaySuccessMessage"
-                        class="field-success -mt-3 mb-3"
-                    >
+                    <div x-cloak
+                         x-show="displaySuccessMessage"
+                         class="text-primary-700 flex items-center mb-7">
                         <p>
                             <?= $escaper->escapeHtml(__('You submitted your review for moderation.')) ?>
                         </p>
                     </div>
-                    <template x-if="displayErrorMessage">
-                        <p class="field-error -mt-3 mb-3">
-                            <template x-for="errorMessage in errorMessages">
-                                <span class="messages" x-html="errorMessage"></span>
-                            </template>
-                        </p>
-                    </template>
-
                     <div class="w-full">
                         <div class="input mb-3">
                             <label for="nickname_field" class="sr-only tracking-widest">
                                 <span><?= $escaper->escapeHtml(__('Nickname')) ?></span>
                             </label>
-                            <input
-                                class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                required
-                                placeholder="<?= $escaper->escapeHtmlAttr(__('Nickname') . '*') ?>" type="text"
-                                name="nickname"
-                                id="nickname_field"
-                            />
+                            <input class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                                   required
+                                   placeholder="<?= $escaper->escapeHtmlAttr(__('Nickname') . '*') ?>" type="text"
+                                   name="nickname" id="nickname_field"/>
                         </div>
                         <div class="input mb-3">
                             <label for="summary_field" class="sr-only">
                                 <span><?= $escaper->escapeHtml(__('Summary')) ?></span>
                             </label>
                             <div>
-                                <input
-                                    class="input__field input__field--outline bg-bg-500 px-5 py-4"
-                                    required
-                                    placeholder="<?= $escaper->escapeHtml(__('Summary') . '*') ?>" type="text"
-                                    name="title"
-                                    id="summary_field"
-                                />
+                                <input class="input__field input__field--outline bg-bg-500 px-5 py-4"
+                                       required
+                                       placeholder="<?= $escaper->escapeHtml(__('Summary') . '*') ?>" type="text"
+                                       name="title"
+                                       id="summary_field"/>
                             </div>
                         </div>
-                        <div class="input mb-4">
+                        <div class="input mb-7">
                             <label for="review_field" class="sr-only tracking-widest">
                                 <span><?= $escaper->escapeHtml(__('Review')) ?></span>
                             </label>
@@ -226,9 +208,7 @@ mutation createProductReviewMutation(
                         </div>
                     </div>
                 </fieldset>
-
                 <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_PRODUCT_REVIEW) : '' ?>
-
                 <div class="mt-4">
                     <button
                         type="submit"
@@ -237,13 +217,19 @@ mutation createProductReviewMutation(
                             '!bg-primary-100': isLoading
                         }"
                     >
-                        <span>
-                            <?= $escaper->escapeHtml(__('Submit Review')) ?>
-                        </span>
+                            <span>
+                                <?= $escaper->escapeHtml(__('Submit Review')) ?>
+                            </span>
                     </button>
+                    <template x-if="displayErrorMessage">
+                        <template x-for="errorMessage in errorMessages">
+                            <p x-text="errorMessage" class="text-error items-center">
+                            </p>
+                        </template>
+                    </template>
+                    <?= $block->getChildHtml('form_additional_after') ?>
+                    <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_PRODUCT_REVIEW) : '' ?>
                 </div>
-                <?= $block->getChildHtml('form_additional_after') ?>
-                <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_PRODUCT_REVIEW) : '' ?>
             </form>
         <?php else: ?>
             <div
