--- a/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/alpinejs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Hyva_Theme/templates/page/js/alpinejs.phtml
@@ -25,6 +25,6 @@ use Magento\Framework\View\Element\Template;
 ></script>
 <!-- Inject alpinejs through cdn -->
 <script type="module"
-        src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+        src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"
         defer
 ></script>
