INTERNAL-411-70; use Authentication.ts instead of Logout.ts

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/authorization.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/authorization.phtml
@@ -12,7 +12,7 @@ use Magento\Framework\Escaper;
 
 if ($block->isLoggedIn()): ?>
     <?php $dataPostParam = $block->getPostParams(); ?>
-    <li x-data="Logout">
+    <li x-data="Authentication">
         <button <?= /* @noEscape */ $block->getLinkAttributes() ?>
             :class="isLoading && 'button--disabled'"
             :disabled="isLoading"
