--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -14,6 +14,7 @@
 @import "content-type/_countdown.style.less";
 @import "content-type/_shop-the-look.style.less";
 @import "content-type/_newsletter.style.less";
+@import "content-type/_menu.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
