Implement new footer structure

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_menu.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_menu.style.less
@@ -13,11 +13,11 @@
   display: flex;
   background: none;
   border: none;
+  text-align: inherit !important;
 }
 
 .satoshi-menu button h2 {
   color: #363030 !important;
-  text-align: left;
   flex-grow: 1;
   font-weight: 700 !important;
   margin: 0 !important;
