--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/menu.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/menu.phtml
@@ -18,7 +18,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 /** @var DecodeHelper $decodeHelper */
 $decodeHelper = $this->helper(DecodeHelper::class);
 $items = $block->getData('items');
-$items = $decodeHelper->decodeJSONHTMLEntity($items);
+$items = $decodeHelper->decodeJSONHTMLEntity($items) ?? [];
 $id = uniqid();
 ?>
 <div
@@ -26,15 +26,16 @@ $id = uniqid();
     x-data="Accordion(!$store.main.isMobile, 300, true)"
 >
     <button
-        class="group flex h-11 w-full items-center rounded-md p-3 md:h-auto md:cursor-text md:px-[3px] md:py-0 md:hover:bg-inherit"
         x-ref="AccordionButton"
+        class="group flex h-11 w-full items-center rounded-md p-3 md:h-auto md:cursor-text md:px-[3px] md:py-0 md:hover:bg-inherit gap-3"
+        style="text-align: inherit;"
         :disabled="!$store.main.isMobile"
         :aria-expanded="isExpanded && $store.main.isMobile"
         aria-controls="<?= $escaper->escapeHtmlAttr($id) ?>_panel"
         aria-labelledby="<?= $escaper->escapeHtmlAttr($id) ?>_label"
         type="button"
     >
-        <h2 class="grow text-left text-text-500" id="<?= $escaper->escapeHtmlAttr($id) ?>_label">
+        <h2 class="grow text-text-500" id="<?= $escaper->escapeHtmlAttr($id) ?>_label">
             <?= $escaper->escapeHtml($block->getData('heading')) ?>
         </h2>
         <div class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable md:hidden">
@@ -65,7 +66,7 @@ $id = uniqid();
                         x-element-transition-trigger
                     >
                         <span
-                            class="link border-transparent md:group-hover:border-current md:group-hover:text-text-500">
+                                class="link border-transparent md:group-hover:border-current md:group-hover:text-text-500">
                             <?= $escaper->escapeHtml($item['item_label']) ?>
                         </span>
                     </a>
