Fix sidebar padding issue

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -153,7 +153,11 @@ h3 {
 }
 
 .main-sidebar {
-  @apply relative col-span-1 md:pl-8 transition-all;
+  @apply relative col-span-1 transition-all;
+}
+
+.grid-columns-plp {
+  @apply md:pl-8;
 }
 
 .sidebar-additional {
