--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/search_fallback.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/search_fallback.phtml
@@ -13,7 +13,7 @@
       <div class="flex flex-col gap-3">
         <h2
           class="text-lg"
-          x-text="hyva.strf('<?= __("Search results for: %0") ?>', `'${$store['transition'].pageData?.search}'`)"
+          x-text="hyva.strf('<?= __("Search results for: %0") ?>', `'${$store['transition'].pageData?.search ?? ''}'`)"
         ></h2>
       </div>
       <div class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"></div>
