INTERNAL-411-144; fix search query rendering in breadcrumbs by handling potential undefined values with a fallback in the template literal

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -122,7 +122,7 @@ $hideOnMobile = in_array($pageType, $mobilePageTypes, true);
           <div
             role="listitem"
             class="breadcrumb text-text-500"
-            x-text="hyva.strf('<?= __("Search results for: %0") ?>', `'${$store['transition'].pageData?.search}'`)"
+            x-text="hyva.strf('<?= __("Search results for: %0") ?>', `'${$store['transition'].pageData?.search ?? ''}'`)"
           ></div>
         </div>
       </template>
