INTERNAL-411-116; fix item hover interferes with filter sidebar

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -149,7 +149,7 @@ h3 {
 }
 
 .grid-columns-plp {
-  @apply h-full flex flex-col md:flex-row gap-y-5;
+  @apply h-full flex flex-col md:flex-row gap-5;
 }
 
 .main-sidebar {
