--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/helper/summary.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/helper/summary.phtml
@@ -25,7 +25,7 @@ $productId = $block->getProduct()->getId();
 $uniqueId = $productId . uniqid();
 ?>
 <?php if ($block->isReviewEnabled()): ?>
-    <div
+    <button
         x-data="Rating"
         @keyup.enter="scrollToRatings()"
         @click="scrollToRatings()"
@@ -39,12 +39,12 @@ $uniqueId = $productId . uniqid();
             itemscope
             itemtype="http://schema.org/AggregateRating"
         <?php endif; ?>
-            :tabindex="reviewsSection ? '0' : '-1'"
-            :aria-label="reviewsSection
+        :tabindex="reviewsSection ? '0' : '-1'"
+        :aria-label="reviewsSection
             ? '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars. Click to go to reviews.', $productName, $starsFilled + $starFragment, $ratingSteps)) ?>'
             : '<?= $escaper->escapeJs(__('%1 rating. %2 out of %3 stars', $productName, $starsFilled + $starFragment, $ratingSteps)) ?>'
         "
-            :role="reviewsSection ? 'button' : 'img'"
+        :role="reviewsSection ? 'button' : 'img'"
     >
         <?php if ($reviewCount): ?>
             <span class="hidden" itemprop="ratingValue"><?= $starsFilled + $starFragment; ?></span>
@@ -58,9 +58,9 @@ $uniqueId = $productId . uniqid();
             <?php endwhile; ?>
             <?php if ($starFragment): ?>
                 <svg
-                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                        style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
-                        class="text-xl"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                    style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"
+                    class="text-xl"
                 >
                     <defs>
                         <linearGradient id="partialFill<?= /* @noEscape */
@@ -76,7 +76,8 @@ $uniqueId = $productId . uniqid();
                         </linearGradient>
                     </defs>
                     <g fill="url(#partialFill<?= (int)$block->getProduct()->getId() ?>)">
-                        <path d="M19.799 9.774a1.025 1.025 0 0 0-.957-.667h-4.144a.34.34 0 0 1-.322-.227L12.89 4.664a1.021 1.021 0 0 0-1.913 0l-.004.01L9.488 8.88a.34.34 0 0 1-.32.227H5.021a1.021 1.021 0 0 0-.656 1.805l3.53 2.927a.34.34 0 0 1 .105.37l-1.483 4.446a1.021 1.021 0 0 0 1.573 1.147l3.64-2.669a.34.34 0 0 1 .402 0l3.638 2.668a1.021 1.021 0 0 0 1.574-1.146l-1.483-4.449a.34.34 0 0 1 .106-.37l3.536-2.93a1.021 1.021 0 0 0 .295-1.132Z"/>
+                        <path
+                            d="M19.799 9.774a1.025 1.025 0 0 0-.957-.667h-4.144a.34.34 0 0 1-.322-.227L12.89 4.664a1.021 1.021 0 0 0-1.913 0l-.004.01L9.488 8.88a.34.34 0 0 1-.32.227H5.021a1.021 1.021 0 0 0-.656 1.805l3.53 2.927a.34.34 0 0 1 .105.37l-1.483 4.446a1.021 1.021 0 0 0 1.573 1.147l3.64-2.669a.34.34 0 0 1 .402 0l3.638 2.668a1.021 1.021 0 0 0 1.574-1.146l-1.483-4.449a.34.34 0 0 1 .106-.37l3.536-2.93a1.021 1.021 0 0 0 .295-1.132Z"/>
                     </g>
                 </svg>
             <?php endif; ?>
@@ -92,5 +93,5 @@ $uniqueId = $productId . uniqid();
                 <?php $i++; ?>
             <?php endwhile; ?>
         <?php endif; ?>
-    </div>
+    </button>
 <?php endif; ?>
