--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
@@ -12,25 +12,25 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 ?>
 
 <div
-  class="transition-preview"
-  x-data="TransitionPreview()"
-  :class="
+    class="transition-preview"
+    x-data="TransitionPreview()"
+    :class="
     {
     'transition-preview--active': isActive,
     'is-transition': $store['transition'].isPreviewAnimating,
     }
   "
-  style="--scroll-progress: 0; --offset-top: 400;"
-  :style="
+    style="--scroll-progress: 0; --offset-top: 400;"
+    :style="
     {
       '--offset-top': offsetTop,
     }
   "
-  x-ref="preview"
+    x-ref="preview"
 >
-  <div
-    class="transition-preview__wrapper"
-    @click="
+    <div
+        class="transition-preview__wrapper"
+        @click="
       (e) => {
         if ($refs.transitionContent.contains(e.target)) return;
         if ($refs.transitionBg === e.target) return;
@@ -38,37 +38,38 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         hidePreview();
       }
     "
-  >
-    <div class="content-wrapper relative mx-auto">
-      <div x-ref="transitionBg" class="transition-preview__bg"></div>
-    </div>
-    <div
-      x-ref="scrollContainer"
-      class="transition-preview__scroll"
     >
-      <div class="content-wrapper relative mx-auto">
-          <div class="transition-preview__content" x-ref="transitionContent" :tabindex="open ? '0' : '-1'">
-          <div id="PreviewContent"></div>
-          <div class="content-wrapper pointer-events-none fixed bottom-0 left-1/2 z-50 -translate-x-1/2">
-            <div
-              class="flex h-56 w-full items-end justify-center bg-gradient-to-t from-[--color-background-500] via-transparent to-transparent py-10 text-4xl opacity-[calc(1-var(--scroll-progress))]"
-            >
-              <div
-                class="animate-[bounce_2s_infinite] text-2xl text-text-50"
-                :class="
+        <div class="content-wrapper relative mx-auto">
+            <div x-ref="transitionBg" class="transition-preview__bg"></div>
+        </div>
+        <div
+            x-ref="scrollContainer"
+            class="transition-preview__scroll"
+            x-a11y-trap="isActive"
+        >
+            <div class="content-wrapper relative mx-auto">
+                <div class="transition-preview__content" x-ref="transitionContent">
+                    <div id="PreviewContent"></div>
+                    <div class="content-wrapper pointer-events-none fixed bottom-0 left-1/2 z-50 -translate-x-1/2">
+                        <div
+                            class="flex h-56 w-full items-end justify-center bg-gradient-to-t from-[--color-background-500] via-transparent to-transparent py-10 text-4xl opacity-[calc(1-var(--scroll-progress))]"
+                        >
+                            <div
+                                class="animate-[bounce_2s_infinite] text-2xl text-text-50"
+                                :class="
                   {
                       'animate-none': $store.main.isReducedMotion
                   }
                 "
-              >
-                <div class="flex flex-col items-center [&>svg]:text-4xl">
-                  <?= $hyvaicons->renderHtml('scroll-mouse'); ?>
+                            >
+                                <div class="flex flex-col items-center [&>svg]:text-4xl">
+                                    <?= $hyvaicons->renderHtml('scroll-mouse'); ?>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
