--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -156,7 +156,7 @@ h3 {
   @apply relative col-span-1 transition-all;
 }
 
-.grid-columns-plp {
+.grid-columns-plp .main-sidebar {
   @apply md:pl-8;
 }
 
