INTERNAL-411-12: Remove wishlist button

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -175,7 +175,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <div class="flex mt-4 justify-end">
       <?php
         // TODO: Implement add to wishtlist / add to compare
-      echo $block->getChildHtml('product.info.addtowishlist');
+        // echo $block->getChildHtml('product.info.addtowishlist');
         // echo $block->getChildHtml('product.info.addtocompare');
       ?>
     <!-- TODO: What is this? -->
