INTERNAL-411-46 - Styling details overlay in wishlist page

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -80,8 +80,8 @@ $mixBackground = true;
                   :key="o"
                 >
                   <p
-                      class="text-[14px]"
-                    x-html="`${option.label}: ${option.value}`"
+                    class="text-[14px]"
+                    x-html="`${option.label}: ${Array.isArray(option.value) ? option.value.join(', ') : option.value}`"
                   ></p>
                 </template>
               </template>
