INTERNAL-422: Implement categories list content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -4,7 +4,7 @@
 @import "content-type/_image-with-text.style.less";
 @import "content-type/_image-banner.style.less";
 @import "content-type/_collage.style.less";
-@import "content-type/_category.style.less";
+@import "content-type/_categories.style.less";
 @import "content-type/_rich-text.style.less";
 @import "content-type/_faq.style.less";
 @import "content-type/_quotes.style.less";
