--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_slider.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_slider.scss
@@ -43,14 +43,13 @@
   &__slide {
     @apply snap-start;
 
-    flex: 0 0
-      calc(
-        (100% - (var(--slide-gap) * (var(--slide-count) - 1))) /
-          var(--slide-count)
-      );
+    flex: 0 0 calc(
+      (100% - (var(--slide-gap) * (var(--slide-count) - 1))) /
+      var(--slide-count)
+    );
     max-width: calc(
       (100% - (var(--slide-gap) * (var(--slide-count) - 1))) /
-        var(--slide-count)
+      var(--slide-count)
     );
   }
 
@@ -97,32 +96,27 @@
         @screen sm {
           scroll-padding: calc(
             ((100vw - var(--slide-max-width)) / 2) +
-              (var(--content-wrapper-padding-x) / 2)
+            (var(--content-wrapper-padding-x) / 2)
           );
 
           &::before,
           &::after {
             min-width: calc(
               ((100vw - var(--slide-max-width)) / 2) +
-                (var(--content-wrapper-padding-x) / 2) - var(--slide-gap)
+              (var(--content-wrapper-padding-x) / 2) - var(--slide-gap)
             );
           }
         }
       }
 
       &__slide {
-        flex: 0 0
-          calc(
-            (
-                100% - var(--content-wrapper-padding-x) -
-                  (var(--slide-gap) * (var(--slide-count) - 1))
-              ) / var(--slide-count)
-          );
+        flex: 0 0 calc(
+          (100% - var(--content-wrapper-padding-x) -
+          (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count)
+        );
         max-width: calc(
-          (
-              var(--slide-max-width) - var(--content-wrapper-padding-x) -
-                (var(--slide-gap) * (var(--slide-count) - 1))
-            ) / var(--slide-count)
+          (var(--slide-max-width) - var(--content-wrapper-padding-x) -
+          (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count)
         );
       }
     }
@@ -135,46 +129,32 @@
 
       &::after {
         right: calc(
-          -100% - (
-              (
-                  var(--slide-max-width) - var(--content-wrapper-padding-x) -
-                    (var(--slide-gap) * (var(--slide-count) - 1))
-                ) / var(--slide-count) * 1 / 3
-            ) + calc(((100vw - var(--slide-max-width)) / 2) +
-                (var(--content-wrapper-padding-x) / 2))
+          -100% - ((var(--slide-max-width) - var(--content-wrapper-padding-x) -
+          (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count) * 1 / 3) + calc(((100vw - var(--slide-max-width)) / 2) +
+          (var(--content-wrapper-padding-x) / 2))
         );
         background: linear-gradient(
-          90deg,
-          transparent 0%,
-          var(--color-background-500)
-            calc(
-              (
-                  var(--slide-max-width) - var(--content-wrapper-padding-x) -
-                    (var(--slide-gap) * (var(--slide-count) - 1))
-                ) / var(--slide-count) * 2 / 3
+            90deg,
+            transparent 0%,
+            var(--color-background-500) calc(
+              (var(--slide-max-width) - var(--content-wrapper-padding-x) -
+              (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count) * 2 / 3
             )
         );
       }
 
       &::before {
         left: calc(
-          -100% - (
-              (
-                  var(--slide-max-width) - var(--content-wrapper-padding-x) -
-                    (var(--slide-gap) * (var(--slide-count) - 1))
-                ) / var(--slide-count) * 1 / 3
-            ) + calc(((100vw - var(--slide-max-width)) / 2) +
-                (var(--content-wrapper-padding-x) / 2))
+          -100% - ((var(--slide-max-width) - var(--content-wrapper-padding-x) -
+          (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count) * 1 / 3) + calc(((100vw - var(--slide-max-width)) / 2) +
+          (var(--content-wrapper-padding-x) / 2))
         );
         background: linear-gradient(
-          270deg,
-          transparent 0%,
-          var(--color-background-500)
-            calc(
-              (
-                  var(--slide-max-width) - var(--content-wrapper-padding-x) -
-                    (var(--slide-gap) * (var(--slide-count) - 1))
-                ) / var(--slide-count) * 2 / 3
+            270deg,
+            transparent 0%,
+            var(--color-background-500) calc(
+              (var(--slide-max-width) - var(--content-wrapper-padding-x) -
+              (var(--slide-gap) * (var(--slide-count) - 1))) / var(--slide-count) * 2 / 3
             )
         );
       }
